Version: 4.0.2
Date: 2020.08.XX
  Features:
    - Basic omnitraction recipes now have proper icons and locales
  Changes:
    - Improved splitting between impure omnitraction recipes to have more even distribution.
    - Renamed technology "omnitractor-electric-x" to "omnitech-omnitractor-electric-x"
    - Renamed technology "base-impure-extraction" to "omnitech-base-impure-extraction"
  Info:
    - This recipe change can possibly require changes to early-game omnitraction setups on existing saves.
---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 2020.08.24
  Bugfixes:
    - Fixed initial angel's ores omnitraction
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2020.08.22
  Info:
    - Updated for Factorio version 1.0.0
  Features:
    - Solvation and Extraction icons are now dynamically generated
    - Improvements to recipe naming conventions
    - Deal with removing Py ores from autoplace
  Bugfixes:
    - Fixed starting items not being properly inserted into the player
---------------------------------------------------------------------------------------------------
Version: 3.18.11
Date: 2020.08.13
  Bugfixes:
    - Fixed hidden recipes getting accidently enabled in some cases
    - Fixed a rounding error that caused tier 1 water extraction techs to not require any packs
---------------------------------------------------------------------------------------------------
Version: 3.18.10
Date: 2020.08.07
  Features:
    - Properly integraded water omnitraction into the tech tree
    - Added a basic water omnitraction recipe
  Bugfixes:
    - Fix bobs ground water not being removed with certain mod setups
    - Removed unneeded srecipe tandardisation
    - Multiple recipe subgroup and order fixes
---------------------------------------------------------------------------------------------------
Version: 3.18.9