@@ -12,20 +12,20 @@
 12=12
 
 [technology-name]
-impure-omnitraction=__1__ focused omnitraction __2__
-pure-omnitraction=__1__ extraction __2__
-base-omnitraction=Basic Omnitraction
+omnitech-impure-omnitraction=__1__ focused omnitraction __2__
+omnitech-pure-omnitraction=__1__ extraction __2__
+omnitech-base-omnitraction=Basic Omnitraction
 omnitech-omnitractor-electric= Electric Omnitractor
-omniston_solvation=Omniston Solvation __1__
-omnic-acid=Omnic acid hydrolyzation __1__
-omnisludge=Omnisludge dissolution __1__
-omnistillation=__1__ omnistillation __2__
-water-omnitraction=Water Omnitraction __1__
-angels-omnicium-smelting=Advanced Omnicium Smelting
-angels-omnicium-iron-alloy-smelting=Omniferrum Smelting
-angels-omnicium-steel-alloy-smelting=Omnichalybs Smelting
-angels-omnicium-aluminium-alloy-smelting=Omnilumina Smelting
-angels-omnicium-tungsten-alloy-smelting=Omnifram Smelting
+omnitech-omniston_solvation=Omniston Solvation __1__
+omnitech-omnic-acid=Omnic acid hydrolyzation __1__
+omnitech-omnisludge=Omnisludge dissolution __1__
+omnitech-omnistillation=__1__ omnistillation __2__
+omnitech-water-omnitraction=Water Omnitraction __1__
+omnitech-angels-omnicium-smelting=Advanced Omnicium Smelting
+omnitech-angels-omnicium-iron-alloy-smelting=Omniferrum Smelting
+omnitech-angels-omnicium-steel-alloy-smelting=Omnichalybs Smelting
+omnitech-angels-omnicium-aluminium-alloy-smelting=Omnilumina Smelting
+omnitech-angels-omnicium-tungsten-alloy-smelting=Omnifram Smelting
 
 [item-group-name]
 omnimatter=Omnimatter
