@@ -70,6 +70,6 @@ local omnic_acid = RecChain:create("omnimatter","omnic-acid"):
 		setTechCost(function(levels,grade) return 25*get_tier_mult(levels,grade,1) end):
 		setTechPacks(function(levels,grade) return get_acid_tech_cost(grade) end):
 		setTechPrereq(function(levels,grade) return get_omnic_req(grade)  end):
-		setTechLocName("omnic-acid"):
+		setTechLocName("omnitech-omnic-acid"):
 		setTechTime(15):
 		extend()
